password input overflow fixed

--- a/src/components/AuthForm/AuthForm.module.scss
+++ b/src/components/AuthForm/AuthForm.module.scss
@@ -32,7 +32,8 @@
             height: 100%;
             background-color: #f3f3f3;
             border: none;
-            padding: 0 16px;
+            padding-left: 16px;
+            padding-right: 50px;
             transition: box-shadow 0.2s ease-in-out;
             &:focus {
                 box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.02);
